--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>DJ</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="DJ.styles.css" rel="stylesheet" />
 </head>
