--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="DJ.styles.css" rel="stylesheet" />
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
